k8s/apps/sweats-rebellion/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: deployment
spec:
  selector:
    matchLabels:
      app: sweats-rebellion
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: sweats-rebellion
    spec:
      containers:
      - image: ghcr.io/kmc-jp/stgproject2022:5c2f7018f370ee443d6ba9a52a05e64beb074867-24 # {"$imagepolicy": "flux-system:sweats-rebellion-policy"}
        imagePullPolicy: IfNotPresent
        name: sweats-rebellion
        ports:
        - containerPort: 80
          name: http
        volumeMounts:
        - mountPath: /etc/nginx/conf.d
          readOnly: true
          name: nginx-conf
        - mountPath: /var/log/nginx
          name: log
      imagePullSecrets:
      - name: ghcr-login-secret

      volumes:
      - name: nginx-conf
        configMap: 
          name: sweats-rebellion-nginx-conf
          items:
            - key: default.conf
              path: default.conf
      - name: log
        emptyDir: {}
