k8s/apps/sweats-rebellion/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: sweats-rebellion
spec:
  ports:
  - port: 80
  selector:
    app: sweats-rebellion
  type: ClusterIP
